Just some gucci shiz

--- a/portfolio/src/styles/globals.scss
+++ b/portfolio/src/styles/globals.scss
@@ -2,10 +2,9 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: rig-solid-bold-fill, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  font-weight: 700;
-  font-style: normal;
+  background-image: url('/img/jpg/Gucci-Block-wallpaper.jpg');
+  background-size: 10% 15%;
+  background-position: 0px 0px;
 }
 
 a {
