--- a/portfolio/src/styles/globals.scss
+++ b/portfolio/src/styles/globals.scss
@@ -2,7 +2,7 @@ html,
 body {
   padding: 0;
   margin: 0;
-  background-image: url('/img/jpg/Gucci-Grotesque-wallpaper.jpg');
+  // background-image: url('/img/jpg/Gucci-Grotesque-wallpaper.jpg');
   background-size: 147px 222px;
   background-position: 0px 0px;
   // background-attachment: fixed;
